# SNOWLAR

./: README.md
docs/hardware/: hardware.md
docs/software/: installation.md  software.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cgsr1_pkg/lib/cgsr1_pkg/: automation  basecontrol  brushtest  calibration  cameraapriltag  computation  counter_automation  dummy_publisher  imu_control  imu_steering  imucontrol  imutobase  joy_steering  joytobase  linus_automation  nodecontroller  nodemanager  straight_motion  tank_motion  web_interface  winch_feedback  winch_motion  winchcontrol
install/cgsr1_pkg/lib/my_python_pkg/: imu_node  joy_to_cmd_vel_and_servo  main_node  web_interface
install/cgsr1_pkg/share/cgsr1_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cgsr1_pkg/share/my_python_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/cgsr1_pkg/: package.xml  setup.cfg  setup.py
src/cgsr1_pkg/cgsr1_pkg/: apriltest.py  automation.py  basecontrol.py  brushtest.py  calibration_node.py  computation.py  counter_automation.py  imucontrol.py  joytobase.py  linus_automation.py  motor_calibration_node.py  nodecontroller.py  simple_publisher.py  straight_motion.py  web_interface.py  winch_feedback.py  winchcontrol.py
src/cgsr1_pkg/cgsr1_pkg/static/: automation.html  index.html  index_debug.html  index_debug_alt.html  index_debug_alt_alt.html  script.js  settings.html  styles.css
src/cgsr1_pkg/launch/: my_python_pkg_launch.py  xlaunch.py
(+8 files in other folders)
